# mlops-template

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  temp.txt
.github/workflows/: cd.yml  ci.yml
configs/: drift_config.yaml  model_config.yaml  training_config.yaml
dags/: drift_check_dag.py  ingest_validate_dag.py  retrain_dag.py  train_register_dag.py
infra/: Dockerfile.monitoring  Dockerfile.serving  Dockerfile.training  docker-compose.ci.yml  docker-compose.yml
infra/alertmanager/: alertmanager.yml
infra/grafana/dashboards/: mlops.json
infra/grafana/provisioning/dashboards/: dashboard.yaml
infra/prometheus/: alert_rules.yml  prometheus.yml
scripts/: bootstrap.sh  generate_data.py  inject_drift.py  load_test.py  seed_mlflow.py
src/data/: generator.py  ingestion.py  validation.py
src/features/: pipeline.py
src/monitoring/: alerting.py  drift_detector.py
src/serving/: app.py  logger.py  metrics.py  predictor.py  schemas.py
src/training/: evaluate.py  register.py  train.py
src/utils/: config.py  logging.py  storage.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py  test_training_pipeline.py
tests/unit/: test_drift.py  test_features.py  test_ingestion.py  test_serving.py  test_training.py
